--- a/landing.html
+++ b/landing.html
@@ -48,7 +48,7 @@
 						<h2 class="text-center colWhite my-2">MODERN BATHROOMS</h2>
 						<div class="mx-auto borderWhite knowingMore"><h4 class="colWhite text-center py-3">Knowing more</h4></div>
 					</div>
-					<div class="borderCream posRel imageGrid mx-auto">
+					<div class="borderCream posRel imageGrid mx-auto vertically-align-mid">
 						<img src="images/walkinshower.jpg">
 					</div>	
 				</div>
@@ -57,7 +57,7 @@
 						<h2 class="text-center colWhite my-2">MODERN BATHROOMS</h2>
 						<div class="mx-auto borderWhite knowingMore"><h4 class="colWhite text-center py-3">Knowing more</h4></div>
 					</div>
-					<div class="borderCream posRel imageGrid mx-auto">
+					<div class="borderCream posRel imageGrid mx-auto vertically-align-mid">
 						<img src="images/walkinshower.jpg">
 					</div>	
 				</div>
@@ -66,7 +66,7 @@
 						<h2 class="text-center colWhite my-2">MODERN BATHROOMS</h2>
 						<div class="mx-auto borderWhite knowingMore"><h4 class="colWhite text-center py-3">Knowing more</h4></div>
 					</div>
-					<div class="borderCream posRel imageGrid mx-auto">
+					<div class="borderCream posRel imageGrid mx-auto vertically-align-mid">
 						<img src="images/walkinshower.jpg">
 					</div>	
 				</div>
@@ -75,7 +75,7 @@
 						<h2 class="text-center colWhite my-2">MODERN BATHROOMS</h2>
 						<div class="mx-auto borderWhite knowingMore"><h4 class="colWhite text-center py-3">Knowing more</h4></div>
 					</div>
-					<div class="borderCream posRel imageGrid mx-auto">
+					<div class="borderCream posRel imageGrid mx-auto vertically-align-mid">
 						<img src="images/walkinshower.jpg">
 					</div>	
 				</div>	
@@ -146,17 +146,17 @@
 			<h4 class="colBlack mx-auto w-75 text-center mb-5">Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text</h4>
 			<div class="row w-75 mx-auto">
 				<div class="col-4 px-0">
-					<div class="borderCream imageGrid mx-auto">
+					<div class="borderCream imageGrid mx-auto vertically-align-mid">
 						<img src="images/merken2.jpg">
 					</div>	
 				</div>
 				<div class="col-4 px-0">
-					<div class="borderCream imageGrid mx-auto">
+					<div class="borderCream imageGrid mx-auto vertically-align-mid">
 						<img src="images/images1.jpg">
 					</div>	
 				</div>
 				<div class="col-4 px-0">
-					<div class="borderCream imageGrid mx-auto">
+					<div class="borderCream imageGrid mx-auto vertically-align-mid">
 						<img src="images/SanitairMerkenBadkamerOntwerpInspiratiew900.jpg">
 					</div>	
 				</div>
