renovation page done

--- a/installation.html
+++ b/installation.html
@@ -18,10 +18,28 @@
   		<div class="collapse navbar-collapse vertically-align-mid" id="navbarNavAltMarkup">
     		<div class="navbar-nav ml-auto mr-4">
 			    <a class="nav-item nav-link colWhite py-4" href="#">Home</a>
-			    <a class="nav-item nav-link colWhite py-4" href="#">Installation</a>
-			    <a class="nav-item nav-link colWhite py-4" href="#">Bathroom Inspiration</a>
+			    <a class="nav-item nav-link colWhite py-4" href="#">Installatie</a>
+			    <li class="nav-item dropdown">
+			    	<a class="nav-item nav-link colWhite py-4 dropdown-toggle" href="#" id="nav_drop_down_1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Badkamer inspiratie</a>
+			    	<div class="dropdown-menu backColBlack" aria-labelledby="nav_drop_down_1">
+			          	<a class="dropdown-item colWhite" href="#">Klassieke badkamer</a>
+			          	<a class="dropdown-item colWhite" href="#">Landelijke badkamers</a>
+			          	<a class="dropdown-item colWhite" href="#">Luxe badkamers</a>
+			          	<a class="dropdown-item colWhite" href="#">Moderne Badkamers</a>
+			        </div>
+			    </li>
 			    <a class="nav-item nav-link colWhite py-4" href="#">Future-Proof Bathroom</a>
-			    <a class="nav-item nav-link colWhite py-4" href="#">Bathrooms</a>
+			    <li class="nav-item dropdown">
+			    	<a class="nav-item nav-link colWhite py-4 dropdown-toggle" href="#" id="nav_drop_down_2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Badkamers</a>
+			    	<div class="dropdown-menu backColBlack" aria-labelledby="nav_drop_down_2">
+			          	<a class="dropdown-item colWhite" href="#">Badkamer indeling</a>
+			          	<a class="dropdown-item colWhite" href="#">Badkamer meubels</a>
+			          	<a class="dropdown-item colWhite" href="#">Kranen</a>
+			          	<a class="dropdown-item colWhite" href="#">Baden en Douches</a>
+			          	<a class="dropdown-item colWhite" href="#">Douche</a>
+			          	<a class="dropdown-item colWhite" href="#">Wastafels</a>
+			        </div>
+			    </li>
 			    <a class="nav-item nav-link colWhite py-4" href="#">Contact</a>
 		    </div>
 		</div>
@@ -33,93 +51,92 @@
 		<div class="midIcons mx-auto mt-3">
 			<img src="images/Installationpageicon1.svg">
 		</div>	
-		<h1 class="mx-auto colBlack mb-4">Bathroom installation</h1>
-		<h3 class="mx-auto colBlack w-75 text-center pb-5">Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text
-		Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text</h3>
+		<h1 class="mx-auto colBlack mb-4">Badkamer installatie</h1>
+		<h3 class="mx-auto colBlack w-75 text-center pb-5">Dagenlang heeft u inspiratie opgedaan, maten opgemeten en berekeningen gedaan. U bent op het punt gekomen dat u precies weet hoe u wil dat uw nieuwe badkamer vormgegeven wordt. Nu volgt echter het lastigste deel: de installatie. Uiteraard wil u ervan verzekerd zijn dat alles op de correcte manier is geïnstalleerd en aangesloten. Hier zorgt Installatiebureau Nieuwegein graag voor! Wij hebben uitgebreide ervaring op het gebied van badkamerinstallatie.</h3>
 	</div>
 	<div class="whiteSectionMargin">
 		<div class="justify-content-end row">
 			<div class="col-7">
-				<h1 class="text-right mt-5 pt-5 mb-4">Realize the bathroom of your dreams</h1>
-				<h3 class="colBlack text-right">Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text</h3>
+				<h1 class="text-right mt-5 pt-5 mb-4">Realiseer de badkamer van uw dromen</h1>
+				<h3 class="colBlack text-right">Als u kiest voor onze vakkundige hulp bij de installatie van uw badkamer zorgen wij ervoor dat u deze precies naar wens kunt vormgeven. Zo bieden wij hulp bij het ontwerpen van de badkamer en komen bij u langs om de maten van de badkamer op te nemen. Daarnaast kijken we of de bouwkundige voorzieningen in de gewenste ruimte misschien aangepast dienen te worden. Daardoor zorgen wij er voor dat u in een mum van tijd heerlijk kunt genieten in de badkamer van uw dromen.</h3>
 			</div>
 			<div class="col-4">
-				<div class="sqarewWindowsCustom borderCream ml-4">
+				<div class="sqarewWindowsCustom borderCream ml-4 vertically-align-mid">
 					<img src="images/mirrorcabinet.jpg">
 				</div>
 			</div>		
 		</div>
 		<div class="justify-content-end row whiteSectionMargin2">
 			<div class="col-4">
-				<div class="sqarewWindowsCustom borderCream ml-auto mr-4">
+				<div class="sqarewWindowsCustom borderCream ml-auto mr-4 vertically-align-mid">
 					<img src="images/mirrorcabinet.jpg">
 				</div>
 			</div>	
 			<div class="col-7">
 				<h1 class="text-left mt-1">Bathroom and toilet</h1>
-				<h3 class="text-left mb-3">Renovating the bathroom or toilet? Bath installations provides the total package for you, including:</h3>
+				<h3 class="text-left mb-3">De badkamer of het toilet renoveren? Badinstallaties verzorgt voor u het totaalpakket, waaronder:</h3>
 				<div class="vertically-align-mid justify-content-start">
 					<div class="plusIcon mr-2">
 						<img src="images/PlusIcon.svg">
 					</div>
-					<h3>Supply, installation and connection of plumbing</h3>	
+					<h3>Leveren, plaatsen en aansluiten van sanitair</h3>	
 				</div>
 				<div class="vertically-align-mid justify-content-start">
 					<div class="plusIcon mr-2">
 						<img src="images/PlusIcon.svg">
 					</div>
-					<h3>Supply, installation and connection of plumbing</h3>	
+					<h3>Aanpassingen leidingwerk</h3>	
 				</div>
 				<div class="vertically-align-mid justify-content-start">
 					<div class="plusIcon mr-2">
 						<img src="images/PlusIcon.svg">
 					</div>
-					<h3>Supply, installation and connection of plumbing</h3>	
+					<h3>Tegelwerk</h3>	
 				</div>
 				<div class="vertically-align-mid justify-content-start">
 					<div class="plusIcon mr-2">
 						<img src="images/PlusIcon.svg">
 					</div>
-					<h3>Supply, installation and connection of plumbing</h3>	
+					<h3>Stucwerk</h3>	
 				</div>
 				<div class="vertically-align-mid justify-content-start">
 					<div class="plusIcon mr-2">
 						<img src="images/PlusIcon.svg">
 					</div>
-					<h3>Supply, installation and connection of plumbing</h3>	
+					<h3>Electra</h3>	
 				</div>
 				<div class="vertically-align-mid justify-content-start">
 					<div class="plusIcon mr-2">
 						<img src="images/PlusIcon.svg">
 					</div>
-					<h3>Supply, installation and connection of plumbing</h3>	
+					<h3>Kitwerk</h3>	
 				</div>
 				<div class="vertically-align-mid justify-content-start">
 					<div class="plusIcon mr-2">
 						<img src="images/PlusIcon.svg">
 					</div>
-					<h3>Supply, installation and connection of plumbing</h3>	
+					<h3>Planning</h3>	
 				</div>
 				<div class="vertically-align-mid justify-content-start">
 					<div class="plusIcon mr-2">
 						<img src="images/PlusIcon.svg">
 					</div>
-					<h3>Supply, installation and connection of plumbing</h3>	
+					<h3>Aansluiten van witgoedapparatuur</h3>	
 				</div>
 				<div class="vertically-align-mid justify-content-start">
 					<div class="plusIcon mr-2">
 						<img src="images/PlusIcon.svg">
 					</div>
-					<h3>Supply, installation and connection of plumbing</h3>	
+					<h3>Kleine bouwkundige werkzaamheden</h3>	
 				</div>	
 			</div>	
 		</div>	
 	</div>
 	<div class="mt-5">
-		<h1 class="text-center mb-5">Service and maintenance</h1>
-		<h3 class="mb-5 text-center">A leaking pipe or kitchen tap? Call 08376363837. Our technichian will visit you as soon as possible to fix the problem</h3>
-		<h1 class="text-center mb-5">Interested?</h1>
-		<h3 class="mb-5 text-center w-75 mx-auto">A leaking pipe or kitchen tap? Call 08376363837. Our technichian will visit you as soon as possible to fix the problem A leaking pipe or kitchen tap? Call 08376363837. Our technichian will visit you as soon as possible to fix the problem >A leaking pipe or kitchen tap? Call 08376363837. Our technichian will visit you as soon as possible to fix the problem</h3>
+		<h1 class="text-center mb-5">Service en onderhoud</h1>
+		<h3 class="mb-5 text-center">Een lekkende leiding of keukenkraan? Bel 0851302688. Onze monteur komt z.s.m. bij u langs om het probleem te verhelpen.</h3>
+		<h1 class="text-center mb-5">Interesse?</h1>
+		<h3 class="mb-5 text-center w-75 mx-auto">Als u vragen heeft over onze diensten of behoefte heeft aan een vakkundig advies, willen wij u uitnodigen om contact met ons op te nemen. Wij hebben al vele mooie “droom” badkamers mogen realiseren over geheel Nederland, o.a. Regio Utrecht, Zuid-Holland, etc. Wij helpen u natuurlijk graag!</h3>
 		<div class="iconEmail mx-auto">
 			<img src="images/ContactUsIcon.svg">
 		</div>
@@ -127,8 +144,7 @@
 	</div>		
 		
 	<footer class="backColBlack">
-		<h3 class="w-75 colWhite text-center mx-auto py-5">Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text
-			Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text</h3>
+		<h3 class="w-75 colWhite text-center mx-auto py-5">Als u kiest voor onze vakkundige hulp bij de installatie van uw badkamer zorgen wij ervoor dat u deze precies naar wens kunt vormgeven. Zo bieden wij hulp bij het ontwerpen van de badkamer en komen bij u langs om de maten van de badkamer op te nemen. Daarnaast kijken we of de bouwkundige voorzieningen in de gewenste ruimte misschien aangepast dienen te worden. Daardoor zorgen wij er voor dat u in een mum van tijd heerlijk kunt genieten in de badkamer van uw dromen.</h3>
 		<div class="row footerRow mx-auto py-4">
 			<div class="col-6">
 				<div class="logoFooter">
@@ -138,7 +154,7 @@
 					<div class="col-3 pl-3">
 						<h3 class="colWhite text-center">Terms and Condition</h3>
 					</div>
-					<div class="col-3">
+					<div class="col-2">
 						<h3 class="colWhite text-center">Privacy Policy</h3>
 					</div>
 					<div class="col-3 mr-auto">
