images from Miljan nav bar done

--- a/installation.html
+++ b/installation.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/css-v1.css">
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg backColBlack">
+	<nav class="navbar navbar-expand-lg backColBlack mainNavbar">
   		<a class="navbar-brand mr-auto logoBradA ml-5" href="#"><img src="images/LogoPNG.png"></a>
   		<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     		<i class="fas fa-bars colWhite fa-lg"></i>
