all pages for bathrooms done

--- a/landing.html
+++ b/landing.html
@@ -45,7 +45,7 @@
 		</div>
 	</nav>
 	<div class="backGroundImages">
-		<img src="images/Badkamers_landing_page_header_1.png">
+		<img src="images/Badkamerslandingpage.png">
 		<div class="headerText backColBlackOpacity">
 			<h3 class="colWhite text-left ml-4 mt-3">Plannen voor badkamer renovatie? De specialisten van badinstallaties regelen alles voor u. Door creatieve badkamer ideeën en slimme oplossingen, realiseren we voor iedere badkamer een complete renovatie. Van ontwerp tot montage Uw volledige badkamer renoveren? Dat kan! Maar ook met kleine aanpassingen krijgt uw badkamer een volledig nieuwe look. Het team van badinstallaties regelt alles voor.</h3>
 			<div class="borderWhite knowingMore my-3 ml-4"><h3 class="colWhite py-1 text-center">Meer weten</h3></div>
@@ -55,8 +55,8 @@
 		<img src="images/girl_with_a_book.jpg">
 		<div class="overLayerOpacity backColBlackOpacity">
 			<h1 class="mx-auto colWhite mt-5 mb-4 pt-5">About Us</h1>
-			<h4 class="mx-auto colWhite w-75 text-center">Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text
-			Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text</h4>
+			<h3 class="mx-auto colWhite h3Main text-center">Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text
+			Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text Text text text</h3>
 		</div>
 		<div class="overLayerOpacity2 backColWhite">
 			<div class="vertically-align-mid w-100 mx-auto sqarewWindowsMain">
@@ -67,7 +67,7 @@
 							<div class="mx-auto borderWhite knowingMore"><h3 class="colWhite text-center py-1">Meer weten</h3></div>
 						</div>
 						<div class="borderCream posRel imageGrid mx-auto vertically-align-mid">
-							<img src="images/walkinshower.jpg">
+							<img src="images/1.png">
 						</div>	
 					</div>
 					<div class="posRel imageOptionsMain px-0">
@@ -76,7 +76,7 @@
 							<div class="mx-auto borderWhite knowingMore"><h3 class="colWhite text-center py-1">Meer weten</h3></div>
 						</div>
 						<div class="borderCream posRel imageGrid mx-auto vertically-align-mid">
-							<img src="images/walkinshower.jpg">
+							<img src="images/2.png">
 						</div>	
 					</div>
 				</div>
@@ -87,7 +87,7 @@
 							<div class="mx-auto borderWhite knowingMore"><h3 class="colWhite text-center py-1">Meer weten</h3></div>
 						</div>
 						<div class="borderCream posRel imageGrid mx-auto vertically-align-mid">
-							<img src="images/walkinshower.jpg">
+							<img src="images/3.png">
 						</div>	
 					</div>
 					<div class="posRel imageOptionsMain px-0">
@@ -96,7 +96,7 @@
 							<div class="mx-auto borderWhite knowingMore"><h3 class="colWhite text-center py-1">Meer weten</h3></div>
 						</div>
 						<div class="borderCream posRel imageGrid mx-auto vertically-align-mid">
-							<img src="images/walkinshower.jpg">
+							<img src="images/4.png">
 						</div>	
 					</div>
 				</div>		
@@ -211,29 +211,23 @@
 				<img src="images/futureproofbathroomspageicon-1.svg">
 			</div>	
 			<h1 class="mx-auto colWhite">Toekomst bestendige badkamer</h1>
-			<h3 class="mx-auto colWhite w-75 text-center">De laatste jaren wordt er steeds meer van de Nederlander verwacht zelfredzaam te zijn en te blijven. Dit betekent  dat u nu of in de toekomst  langer in uw eigen woning moet blijven wonen. De kleine dingen die nu nog gemakkelijk gaan, zullen  lastiger of soms zelfs onmogelijk worden zullen als u op leeftijd begint te.</h3>
+			<h3 class="mx-auto colWhite h3Main text-center">De laatste jaren wordt er steeds meer van de Nederlander verwacht zelfredzaam te zijn en te blijven. Dit betekent  dat u nu of in de toekomst  langer in uw eigen woning moet blijven wonen. De kleine dingen die nu nog gemakkelijk gaan, zullen  lastiger of soms zelfs onmogelijk worden zullen als u op leeftijd begint te.</h3>
 			<div class="knowingMore borderWhite mx-auto mt-5">
 				<h3 class="colWhite text-center py-1">Meer weten</h3>
 			</div>	
 		</div>
 		<div class="overLayerOpacity2 backColWhite boxShadow">
 			<h1 class="colBlack text-center mt-3">Merken</h1>
-			<h3 class="colBlack mx-auto w-75 text-center mb-5">Onderstaande merken worden door Badinstallaties veelal gebruikt. De getoonde merken staan voor kwaliteit en duurzaam en gaan uw leven lang mee. Staat het door u gevonden merk er niet tussen, vrees niet. Wij kunnen u altijd verder helpen.</h3>
-			<div class="row w-75 mx-auto">
-				<div class="col-4 px-0">
-					<div class="borderCream imageGrid mx-auto vertically-align-mid">
-						<img src="images/merken2.jpg">
-					</div>	
+			<h3 class="colBlack mx-auto h3Main text-center mb-5">Onderstaande merken worden door Badinstallaties veelal gebruikt. De getoonde merken staan voor kwaliteit en duurzaam en gaan uw leven lang mee. Staat het door u gevonden merk er niet tussen, vrees niet. Wij kunnen u altijd verder helpen.</h3>
+			<div class="vertically-align-mid mx-auto justify-content-between mainBrandLogos pt-5">
+				<div class="imgBrandLogos borderCream vertically-align-mid">
+					<img src="images/1.jpg">	
 				</div>
-				<div class="col-4 px-0">
-					<div class="borderCream imageGrid mx-auto vertically-align-mid">
-						<img src="images/images1.jpg">
-					</div>	
+				<div class="imgBrandLogos borderCream vertically-align-mid">
+					<img src="images/2.jpg">	
 				</div>
-				<div class="col-4 px-0">
-					<div class="borderCream imageGrid mx-auto vertically-align-mid">
-						<img src="images/SanitairMerkenBadkamerOntwerpInspiratiew900.jpg">
-					</div>	
+				<div class="imgBrandLogos borderCream vertically-align-mid">
+					<img src="images/3.jpg">	
 				</div>
 			</div>	
 		</div>
