--- a/installation.html
+++ b/installation.html
@@ -52,7 +52,7 @@
 			<img src="images/Installationpageicon1.svg">
 		</div>	
 		<h1 class="mx-auto colBlack mb-4">Badkamer installatie</h1>
-		<h3 class="mx-auto colBlack w-75 text-center pb-5">Dagenlang heeft u inspiratie opgedaan, maten opgemeten en berekeningen gedaan. U bent op het punt gekomen dat u precies weet hoe u wil dat uw nieuwe badkamer vormgegeven wordt. Nu volgt echter het lastigste deel: de installatie. Uiteraard wil u ervan verzekerd zijn dat alles op de correcte manier is geïnstalleerd en aangesloten. Hier zorgt Installatiebureau Nieuwegein graag voor! Wij hebben uitgebreide ervaring op het gebied van badkamerinstallatie.</h3>
+		<h3 class="mx-auto colBlack h3Main text-center pb-5">Dagenlang heeft u inspiratie opgedaan, maten opgemeten en berekeningen gedaan. U bent op het punt gekomen dat u precies weet hoe u wil dat uw nieuwe badkamer vormgegeven wordt. Nu volgt echter het lastigste deel: de installatie. Uiteraard wil u ervan verzekerd zijn dat alles op de correcte manier is geïnstalleerd en aangesloten. Hier zorgt Installatiebureau Nieuwegein graag voor! Wij hebben uitgebreide ervaring op het gebied van badkamerinstallatie.</h3>
 	</div>
 	<div class="whiteSectionMargin">
 		<div class="justify-content-end row">
@@ -134,9 +134,9 @@
 	</div>
 	<div class="mt-5">
 		<h1 class="text-center mb-5">Service en onderhoud</h1>
-		<h3 class="mb-5 text-center">Een lekkende leiding of keukenkraan? Bel 0851302688. Onze monteur komt z.s.m. bij u langs om het probleem te verhelpen.</h3>
+		<h3 class="mb-5 text-center h3Main mx-auto">Een lekkende leiding of keukenkraan? Bel 0851302688. Onze monteur komt z.s.m. bij u langs om het probleem te verhelpen.</h3>
 		<h1 class="text-center mb-5">Interesse?</h1>
-		<h3 class="mb-5 text-center w-75 mx-auto">Als u vragen heeft over onze diensten of behoefte heeft aan een vakkundig advies, willen wij u uitnodigen om contact met ons op te nemen. Wij hebben al vele mooie “droom” badkamers mogen realiseren over geheel Nederland, o.a. Regio Utrecht, Zuid-Holland, etc. Wij helpen u natuurlijk graag!</h3>
+		<h3 class="mb-5 text-center h3Main mx-auto">Als u vragen heeft over onze diensten of behoefte heeft aan een vakkundig advies, willen wij u uitnodigen om contact met ons op te nemen. Wij hebben al vele mooie “droom” badkamers mogen realiseren over geheel Nederland, o.a. Regio Utrecht, Zuid-Holland, etc. Wij helpen u natuurlijk graag!</h3>
 		<div class="iconEmail mx-auto">
 			<img src="images/ContactUsIcon.svg">
 		</div>
@@ -144,7 +144,7 @@
 	</div>		
 		
 	<footer class="backColBlack">
-		<h3 class="w-75 colWhite text-center mx-auto py-5">Als u kiest voor onze vakkundige hulp bij de installatie van uw badkamer zorgen wij ervoor dat u deze precies naar wens kunt vormgeven. Zo bieden wij hulp bij het ontwerpen van de badkamer en komen bij u langs om de maten van de badkamer op te nemen. Daarnaast kijken we of de bouwkundige voorzieningen in de gewenste ruimte misschien aangepast dienen te worden. Daardoor zorgen wij er voor dat u in een mum van tijd heerlijk kunt genieten in de badkamer van uw dromen.</h3>
+		<h3 class="w-50 colWhite text-center mx-auto py-5">Als u kiest voor onze vakkundige hulp bij de installatie van uw badkamer zorgen wij ervoor dat u deze precies naar wens kunt vormgeven. Zo bieden wij hulp bij het ontwerpen van de badkamer en komen bij u langs om de maten van de badkamer op te nemen. Daarnaast kijken we of de bouwkundige voorzieningen in de gewenste ruimte misschien </h3>
 		<div class="row footerRow mx-auto py-4">
 			<div class="col-6">
 				<div class="logoFooter">
