--- a/renovatie.html
+++ b/renovatie.html
@@ -49,7 +49,7 @@
 	</div>
 	<div class="backColWhite">
 		<h1 class="mx-auto colBlack w-75 text-center my-4">Plans for bathroom renovation?</h1>
-		<h3 class="mx-auto colBlack w-75 text-center mt-4 mb-5">Dagenlang heeft u inspiratie opgedaan, maten opgemeten en berekeningen gedaan. U bent op het punt gekomen dat u precies weet hoe u wil dat uw nieuwe badkamer vormgegeven wordt.</h3>
+		<h3 class="mx-auto colBlack h3Main text-center mt-4 mb-5">Dagenlang heeft u inspiratie opgedaan, maten opgemeten en berekeningen gedaan. U bent op het punt gekomen dat u precies weet hoe u wil dat uw nieuwe badkamer vormgegeven wordt.</h3>
 	</div>
 	<div class="backGroundImages">
 		<img src="images/photo-1482731215275-a1f151646268.jpg">
@@ -58,21 +58,21 @@
 				<img src="images/Bathroomrenovationpageicon-1.svg">
 			</div>	
 			<h1 class="mx-auto colWhite">From design to assembly</h1>
-			<h3 class="mx-auto colWhite w-75 text-center">De laatste jaren wordt er steeds meer van de Nederlander verwacht zelfredzaam te zijn en te blijven. Dit betekent  dat u nu of in de toekomst  langer in uw eigen woning moet blijven wonen.</h3>
+			<h3 class="mx-auto colWhite h3Main text-center">De laatste jaren wordt er steeds meer van de Nederlander verwacht zelfredzaam te zijn en te blijven. Dit betekent  dat u nu of in de toekomst  langer in uw eigen woning moet blijven wonen.</h3>
 			<div class="w-75 mx-auto backColDarkOpacity mt-4 mb-3">
 				<div class="vertically-align-mid pt-2"><div class="circleDot backColWhite"></div><h2 class="vertically-align-mid text-center colWhite ml-3">Bathroom design according to your wishes</h2></div>
 				<div class="vertically-align-mid"><div class="circleDot backColWhite"></div><h2 class="vertically-align-mid text-center colWhite ml-3">Bathroom design according to your wishes</h2></div>
 				<div class="vertically-align-mid"><div class="circleDot backColWhite"></div><h2 class="vertically-align-mid text-center colWhite ml-3">Bathroom design according to your wishes</h2></div>
 				<div class="vertically-align-mid pb-2"><div class="circleDot backColWhite"></div><h2 class="vertically-align-mid text-center colWhite ml-3">Bathroom design according to your wishes</h2></div>
 			</div>
-			<h3 class="mx-auto colWhite w-75 text-center">De laatste jaren wordt er steeds meer van de Nederlander verwacht zelfredzaam te zijn en te blijven. Dit betekent  dat u nu of in de toekomst  langer in uw eigen woning moet blijven wonen.</h3>	
+			<h3 class="mx-auto colWhite h3Main text-center">De laatste jaren wordt er steeds meer van de Nederlander verwacht zelfredzaam te zijn en te blijven. Dit betekent  dat u nu of in de toekomst  langer in uw eigen woning moet blijven wonen.</h3>	
 		</div>
 		<div class="overLayerOpacity2 backColWhite">
 			<h1 class="colBlack text-center mb-3 mt-5">Customized bathroom</h1>
-			<h3 class="colBlack mx-auto w-75 text-center mb-3">Onderstaande merken worden door Badinstallaties veelal gebruikt. De getoonde merken staan voor kwaliteit en duurzaam en gaan uw leven lang mee. Staat het door u gevonden merk er niet tussen, vrees niet. Wij kunnen u altijd verder helpen.</h3>
+			<h3 class="colBlack mx-auto h3Main text-center mb-3">Onderstaande merken worden door Badinstallaties veelal gebruikt. De getoonde merken staan voor kwaliteit en duurzaam en gaan uw leven lang mee. Staat het door u gevonden merk er niet tussen, vrees niet. Wij kunnen u altijd verder helpen.</h3>
 			<h1 class="colBlack text-center my-3">Professional installation</h1>
-			<h3 class="colBlack mx-auto w-75 text-center mb-3">Onderstaande merken worden door Badinstallaties veelal gebruikt. De getoonde merken staan voor kwaliteit en duurzaam en gaan uw leven lang mee. Staat het door u gevonden merk er niet tussen, vrees niet. Wij kunnen u altijd verder helpen.</h3>
-			<h3 class="colBlack mx-auto w-75 text-center">Onderstaande merken worden door Badinstallaties veelal gebruikt. De getoonde merken staan voor kwaliteit en duurzaam en gaan uw leven lang mee. Staat het door u gevonden merk er niet tussen, vrees niet. Wij kunnen u altijd verder helpen.Onderstaande merken worden door Badinstallaties veelal gebruikt. De getoonde merken staan voor kwaliteit en duurzaam en gaan uw leven lang mee. Staat het door u gevonden merk er niet tussen, vrees niet. Wij kunnen u altijd verder helpen.</h3>	
+			<h3 class="colBlack mx-auto h3Main text-center mb-3">Onderstaande merken worden door Badinstallaties veelal gebruikt. De getoonde merken staan voor kwaliteit en duurzaam en gaan uw leven lang mee. Staat het door u gevonden merk er niet tussen, vrees niet. Wij kunnen u altijd verder helpen.</h3>
+			<h3 class="colBlack mx-auto h3Main text-center">Onderstaande merken worden door Badinstallaties veelal gebruikt. De getoonde merken staan voor kwaliteit en duurzaam en gaan uw leven lang mee. Staat het door u gevonden merk er niet tussen, vrees niet. Wij kunnen u altijd verder helpen.Onderstaande merken worden door Badinstallaties veelal gebruikt. De getoonde merken staan voor kwaliteit en duurzaam en gaan uw leven lang mee. Staat het door u gevonden merk er niet tussen, vrees niet. Wij kunnen u altijd verder helpen.</h3>	
 		</div>
 	</div>
 	<div class="backColWhite">
